about us section done

--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
                         <h2 class="py-2">Building Digital Dreams, One Line of Code at a Time!</h2>
                         <h2 class="py-2">You Dream It, We Build It. Your Dreams Are Like Pieces Of Puzzles. We Just Bring All The Pieces Together.</h2>
                     </div><!-- End Intro-Text -->
-                    <div class="row col-lg-6 d-flex align-items-center py-4">
+                    <!-- <div class="row col-lg-6 d-flex align-items-center py-4">
                         <div class="stat text-center mx-3 px-2">
                             <h4 class="py-2">CLIENTS</h4>
                             <p class="py-1">20M+</p>
@@ -72,7 +72,7 @@
                             <h4 class="py-2">PRODUCTS</h4>
                             <p class="py-1">150</p>
                         </div>
-                    </div><!-- End Row -->
+                    </div>End Row -->
                 </div><!-- End Intro -->
                 <div class="intro align-items-center">
                     <div class="intro-text col-lg-7">
@@ -94,7 +94,7 @@
         <!-- About Us -->
         <section class="about-us" id="about">
             <div class="container-flex py-4 px-lg-5" id="main-h">
-                <h1 class="py-2">XWEN: Empowering Digital Solutions for Tomorrow's Success</h1>
+                <h1 class="py-2">XWEN:  Uniting Digital Puzzle Pieces for Tomorrow's Triumph</h1>
             </div><!-- End Container-Flex-->
             <div class="tabs container d-flex justify-content-center align-items-center py-2">
                <button class="tab-btn mx-2">INTRO</button>
@@ -103,48 +103,97 @@
                <button class="tab-btn mx-2">WHY US?</button>
             </div><!-- End Tabs -->
             <div class="about-content row">
-                <div class="content col-lg-6" id="profile-image">
-                    <img src="../pictures/computer1.png">
+                <div class="content" id="profile-image">
+                    <img class="image" src="../gifs/puzzle.gif">
                 </div><!-- End Col-->
                 <div class="content col-lg-6" id="profile-text">
                     <p class="py-2">
-                        Your gateway to innovative and transformative digital solutions.<br>At XWEN, we are passionate about harnessing the power of technology to empower businesses and individuals for a brighter future.<br>With a strong focus on excellence and a deep understanding of the ever-evolving digital landscape, we are committed to delivering exceptional services that drive success and growth.
+                        Step into our world, where we masterfully piece together digital solutions like a perfectly crafted puzzle.<br>Our passion lies in assembling technology's puzzle pieces to empower businesses and individuals for a brighter future.<br>Embracing the challenge of solving intricate digital riddles, we are dedicated to delivering exceptional services that lead to triumphant success and growth.
                     </p>
                 </div><!-- End Col-->
             </div><!-- End Row -->
             <div class="about-content row">
                 <div class="content col-lg-6">
-                    <img src="../pictures/road.png">
+                    <img src="../pictures/journey.png">
                 </div><!-- End Col-->
                 <div class="content col-lg-6">
                     <p class="py-2">
-                        Since our inception, we have embarked on an exciting journey, collaborating with a diverse range of clients across various industries.<br>Our mission is to bridge the gap between creativity and functionality, seamlessly blending aesthetics with cutting-edge technologies.<br>As trailblazers in the digital realm, we continuously challenge ourselves to push the boundaries of possibility, delivering solutions that resonate with both our clients and their target audience.
+                        Just like solving a captivating puzzle, our journey has been a thrilling adventure.<br>With each project, we navigate the complexities and intricacies, ensuring that every digital piece fits flawlessly.<br>From the first edge piece to the final touch, we collaborate with clients across diverse industries, understanding their unique perspectives and crafting bespoke solutions.
                     </p>
                 </div><!-- End Col-->
             </div><!-- End Row -->
             <div class="about-content row">
-                <div class="content row d-flex justify-content-center py-2" id="services">
-                    <div class="row d-flex justify-content-center mx-3">
+                <div class="services content row d-flex justify-content-center py-2">
+                    <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png">
-                        <h2 class="text-center text-light py-2">Web Development</h2>
+                        <h2 class="text-center py-2">Website Development</h2>
+                        <div class="description container-flex py-2">
+                            <h3 class="service-text text-light py-2 px-3"></h3>
+                        </div><!-- End Description -->
                     </div><!-- End Row-->
-                    <div class="row d-flex justify-content-center mx-3">
+                    <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ai.png">
-                        <h2 class="text-center text-light py-2">AI & Machine Learning</h2>
+                        <h2 class="text-center py-2">AI & Machine Learning</h2>
+                        <div class="description container-flex py-2">
+                            <h3 class="service-text text-light py-2 px-3"></h3>
+                        </div><!-- End Description -->
                     </div><!-- End Row-->
-                    <div class="row d-flex justify-content-center mx-3">
+                    <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/ui.png">
-                        <h2 class="text-center text-light py-2">UI/UX Development</h2>
+                        <h2 class="text-center py-2">UI/UX Development</h2>
+                        <div class="description container-flex py-2">
+                            <h3 class="service-text text-light py-2 px-3"></h3>
+                        </div>
                     </div><!-- End Row-->
-                    <div class="row d-flex justify-content-center mx-3 mt-3">
+                </div><!-- End Row-->
+                <div class="services content row d-flex justify-content-center py-4">
+                    <div class="service row d-flex justify-content-center align-items-center mx-3 mt-5">
                         <img class="service-image" src="../pictures/ecomm.png">
-                        <h2 class="text-center text-light py-2">E-Commerce Solutions</h2>
+                        <h2 class="text-center py-2">E-Commerce Solutions</h2>
+                        <div class="description container-flex py-2">
+                            <h3 class="service-text text-light py-2 px-3"></h3>
+                        </div><!-- End Description -->
                     </div><!-- End Row-->
-                    <div class="row d-flex justify-content-center mx-3 mt-3">
-                        <img class="service-image" src="../pictures/ui.png">
-                        <h2 class="text-center text-light py-2">Mobile App Development</h2>
+                    <div class="service row d-flex justify-content-center align-items-center mx-3 mt-5">
+                        <img class="service-image" src="../pictures/mobile.png">
+                        <h2 class="text-center py-2">Mobile App Development</h2>
+                        <div class="description container-flex py-2">
+                            <h3 class="service-text text-light py-2 px-3"></h3>
+                        </div><!-- End Description -->
                     </div><!-- End Row-->
-                </div><!-- End Col-->
+                </div>
+            </div><!-- End Row -->
+            <div class="about-content row">
+                <div class="why-us container">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="why-us-content col-lg-6">
+                            <h2>Customer-Centric</h2>
+                            <p class="py-2">We prioritize your goals and requirements. Our customer-centric approach ensures solutions tailored to your puzzle's unique shape.</p>
+                        </div>
+                        <img class="why-us-image" src="../pictures/handshake.png">
+                    </div><!-- End Row -->
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="why-us-content col-lg-6">
+                            <h2>Tech Enthusiasts</h2>
+                            <p class="py-2">From AI and machine learning to blockchain, we revel in the ever-changing digital puzzle landscape.</p>
+                        </div>
+                        <img class="why-us-image" src="../pictures/tech.png">
+                    </div><!-- End Row -->
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="why-us-content col-lg-6">
+                            <h2>Creativity at its Core</h2>
+                            <p class="py-2">Like an artist paints a masterpiece, we infuse creativity into every solution. Our out-of-the-box thinking crafts digital experiences that captivate and delight.</p>
+                        </div>
+                        <img class="why-us-image" src="../pictures/creativity.png">
+                    </div><!-- End Row -->
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="why-us-content col-lg-6">
+                            <h2>Precision & Reliability</h2>
+                            <p class="py-2">Our meticulous attention to detail ensures reliable and polished results.</p>
+                        </div>
+                        <img class="why-us-image" src="../pictures/precision.png">
+                    </div><!-- End Row -->
+                </div><!-- End Why-Us -->
             </div><!-- End Row -->
         </section><!-- End About-Us -->
     </body>
