--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <title>XWEN</title>
 </head>
 
-<html lang="en-us">
+<html>
     <body>
         <section class="main">
             <!-- Main Menu -->
@@ -59,20 +59,6 @@
                         <h2 class="py-2">Building Digital Dreams, One Line of Code at a Time!</h2>
                         <h2 class="py-2">You Dream It, We Build It. Your Dreams Are Like Pieces Of Puzzles. We Just Bring All The Pieces Together.</h2>
                     </div><!-- End Intro-Text -->
-                    <!-- <div class="row col-lg-6 d-flex align-items-center py-4">
-                        <div class="stat text-center mx-3 px-2">
-                            <h4 class="py-2">CLIENTS</h4>
-                            <p class="py-1">20M+</p>
-                        </div>
-                        <div class="stat text-center mx-3 px-2">
-                            <h4 class="py-2">PROJECTS</h4>
-                            <p class="py-1">30M+</p>
-                        </div>
-                        <div class="stat text-center mx-3 px-2">
-                            <h4 class="py-2">PRODUCTS</h4>
-                            <p class="py-1">150</p>
-                        </div>
-                    </div>End Row -->
                 </div><!-- End Intro -->
                 <div class="intro align-items-center">
                     <div class="intro-text col-lg-7">
@@ -103,7 +89,7 @@
                <button class="tab-btn mx-2">WHY US?</button>
             </div><!-- End Tabs -->
             <div class="about-content row">
-                <div class="content" id="profile-image">
+                <div class="content col-lg-6" id="profile-image">
                     <img class="image" src="../gifs/puzzle.gif">
                 </div><!-- End Col-->
                 <div class="content col-lg-6" id="profile-text">
@@ -112,17 +98,17 @@
                     </p>
                 </div><!-- End Col-->
             </div><!-- End Row -->
-            <div class="about-content row">
+            <div class="about-content row mt-4">
                 <div class="content col-lg-6">
-                    <img src="../pictures/journey.png">
+                    <img class="journey-image" src="../pictures/journey.png">
                 </div><!-- End Col-->
                 <div class="content col-lg-6">
                     <p class="py-2">
-                        Just like solving a captivating puzzle, our journey has been a thrilling adventure.<br>With each project, we navigate the complexities and intricacies, ensuring that every digital piece fits flawlessly.<br>From the first edge piece to the final touch, we collaborate with clients across diverse industries, understanding their unique perspectives and crafting bespoke solutions.
+                        Just like solving a captivating puzzle, our journey has been a thrilling adventure.<br>With each project, we navigate the complexities and intricacies, ensuring that every digital piece fits flawlessly.<br>From the first edge piece to the final touch, we collaborate with clients across diverse industries,<br>understanding their unique perspectives and crafting bespoke solutions.
                     </p>
                 </div><!-- End Col-->
             </div><!-- End Row -->
-            <div class="about-content row">
+            <div class="about-content row mt-4">
                 <div class="services content row d-flex justify-content-center py-2">
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png">
@@ -146,7 +132,7 @@
                         </div>
                     </div><!-- End Row-->
                 </div><!-- End Row-->
-                <div class="services content row d-flex justify-content-center py-4">
+                <div class="services content row d-flex justify-content-center">
                     <div class="service row d-flex justify-content-center align-items-center mx-3 mt-5">
                         <img class="service-image" src="../pictures/ecomm.png">
                         <h2 class="text-center py-2">E-Commerce Solutions</h2>
@@ -163,40 +149,72 @@
                     </div><!-- End Row-->
                 </div>
             </div><!-- End Row -->
-            <div class="about-content row">
-                <div class="why-us container">
+            <div class="about-content row mt-2">
+                <div class="why-us row">
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-6">
+                        <div class="why-us-content col-lg-8">
                             <h2>Customer-Centric</h2>
-                            <p class="py-2">We prioritize your goals and requirements. Our customer-centric approach ensures solutions tailored to your puzzle's unique shape.</p>
+                            <p class="py-2">Just as puzzles come to life through the creator's vision, we prioritize your goals and requirements. Our customer-centric approach ensures solutions tailored to your puzzle's unique shape.</p>
                         </div>
-                        <img class="why-us-image" src="../pictures/handshake.png">
+                        <div class="col-lg-3 d-flex justify-content-center">
+                            <img class="why-us-image" src="../pictures/handshake.png">
+                        </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-6">
+                        <div class="why-us-content col-lg-8">
                             <h2>Tech Enthusiasts</h2>
-                            <p class="py-2">From AI and machine learning to blockchain, we revel in the ever-changing digital puzzle landscape.</p>
+                            <p class="py-2">We embrace technology like puzzle enthusiasts embrace challenges. From AI and machine learning to blockchain, we revel in the ever-changing digital puzzle landscape.</p>
                         </div>
-                        <img class="why-us-image" src="../pictures/tech.png">
+                        <div class="col-lg-3 d-flex justify-content-center">
+                           <img class="why-us-image" src="../pictures/tech.png">
+                        </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-6">
+                        <div class="why-us-content col-lg-8">
                             <h2>Creativity at its Core</h2>
                             <p class="py-2">Like an artist paints a masterpiece, we infuse creativity into every solution. Our out-of-the-box thinking crafts digital experiences that captivate and delight.</p>
                         </div>
-                        <img class="why-us-image" src="../pictures/creativity.png">
+                        <div class="col-lg-3 d-flex justify-content-center">
+                            <img class="why-us-image" src="../pictures/creativity.png">
+                        </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-6">
+                        <div class="why-us-content col-lg-8">
                             <h2>Precision & Reliability</h2>
-                            <p class="py-2">Our meticulous attention to detail ensures reliable and polished results.</p>
+                            <p class="py-2">Solving puzzles demands precision, and that's what we bring to every project. Our meticulous attention to detail ensures reliable and polished results.</p>
                         </div>
-                        <img class="why-us-image" src="../pictures/precision.png">
+                        <div class="col-lg-3 d-flex justify-content-center">
+                            <img class="why-us-image" src="../pictures/precision.png">
+                        </div>
                     </div><!-- End Row -->
                 </div><!-- End Why-Us -->
             </div><!-- End Row -->
         </section><!-- End About-Us -->
     </body>
+    <footer>
+        <div class="footer-cover container-flex pt-4">
+            <div class="container-flex">
+                <div class="row d-flex justify-content-center align-items-center">
+                  <ul class="quick-links d-flex justify-content-center">
+                    <li class="py-2"><a class="link" href="#">Home</a></li>
+                    <li class="py-2"><a class="link" href="#">About Us</a></li>
+                    <li class="py-2"><a class="link" href="#">Projects</a></li>
+                    <li class="py-2"><a class="link" href="#">Blogs</a></li>
+                  </ul>
+                </div>
+                <div class="row d-flex justify-content-center py-2">
+                    <a class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-facebook"></i></a>
+                    <a class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-instagram"></i></a>
+                    <a class="social-link link d-flex justify-content-center py-2 mx-3" href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="closing container-flex w-100">
+                <div class="row d-flex justify-content-center py-3">
+                   <h2 class="py-2">All Rights Reserved © XWEN</h2>
+                </div>
+            </div>
+        </div>
+    </footer>
 </html> 
 
 <!-- JS -->
