--- a/html/index.html
+++ b/html/index.html
@@ -86,17 +86,17 @@
                             <p class="text-light py-2 px-2"> 
                               Welcome to our website's interactive chatbot, your friendly and knowledgeable virtual assistant! 
                             </p>
-                        </div>
+                        </div><!-- End Bot-Text -->
                         <div class="bot-text container-flex">
                             <p class="text-light py-2 px-2">
                                 Lets talk business, what kind of website you are looking for?
                             </p>
-                        </div>
+                        </div><!-- End Bot-Text -->
                     </div><!-- End Col -->
                     <form class="chat-form py-2 px-2">
                         <input class="py-2" type="text" id="msg" placeholder="type your message">
                     </form><!-- End Chat-Form -->
-                    <button class="chat-submit mx-1" id="msg-submit" onclick="read_input()"><i class="fa fa-paper-plane py-1"></i></button>
+                    <button class="chat-submit mx-2" id="msg-submit" onclick="read_input()"><i class="fa fa-paper-plane py-1"></i></button>
                 </div><!-- End Chat-Box -->
                 <button class="chat-btn py-4" id="bot-btn"></button>
             </div><!-- End Container -->
@@ -176,44 +176,69 @@
             <div class="about-content row mt-2">
                 <div class="why-us row">
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-8">
+                        <div class="why-us-content col-lg-6">
                             <h2>Customer-Centric</h2>
                             <p class="py-2">Just as puzzles come to life through the creator's vision, we prioritize your goals and requirements. Our customer-centric approach ensures solutions tailored to your puzzle's unique shape.</p>
                         </div>
-                        <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="col-lg-4 d-flex justify-content-center">
                             <img class="why-us-image" src="../pictures/handshake.png">
                         </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-8">
+                        <div class="why-us-content col-lg-6">
                             <h2>Tech Enthusiasts</h2>
                             <p class="py-2">We embrace technology like puzzle enthusiasts embrace challenges. From AI and machine learning to blockchain, we revel in the ever-changing digital puzzle landscape.</p>
                         </div>
-                        <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="col-lg-4 d-flex justify-content-center">
                            <img class="why-us-image" src="../pictures/tech.png">
                         </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-8">
+                        <div class="why-us-content col-lg-6">
                             <h2>Creativity at its Core</h2>
                             <p class="py-2">Like an artist paints a masterpiece, we infuse creativity into every solution. Our out-of-the-box thinking crafts digital experiences that captivate and delight.</p>
                         </div>
-                        <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="col-lg-4 d-flex justify-content-center">
                             <img class="why-us-image" src="../pictures/creativity.png">
                         </div>
                     </div><!-- End Row -->
                     <div class="row d-flex justify-content-center align-items-center">
-                        <div class="why-us-content col-lg-8">
+                        <div class="why-us-content col-lg-6">
                             <h2>Precision & Reliability</h2>
                             <p class="py-2">Solving puzzles demands precision, and that's what we bring to every project. Our meticulous attention to detail ensures reliable and polished results.</p>
                         </div>
-                        <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="col-lg-4 d-flex justify-content-center">
                             <img class="why-us-image" src="../pictures/precision.png">
                         </div>
                     </div><!-- End Row -->
                 </div><!-- End Why-Us -->
             </div><!-- End Row -->
         </section><!-- End About-Us -->
+        <section class="techs">
+            <div class="container-flex py-4">
+                <h1 class="py-2 px-lg-5">Technologies We Use</h1>
+                <div class="row d-flex d-flex align-items-center pt-2">
+                    <div class="tech-img d-flex col-lg-5 py-2">
+                        <img class="img-1" src="../pictures/django.png">
+                        <img class="img-2" src="../pictures/python.png">
+                    </div><!-- End Tech-Img-->
+                    <div class="tech-img d-flex col-lg-5 py-2">
+                        <img class="img-1" src="../pictures/node.png">
+                        <img class="img-2" src="../pictures/js.png">
+                    </div><!-- End Tech-Img-->
+                </div><!-- End Row -->
+                <div class="row d-flex d-flex align-items-center py-4">
+                    <div class="tech-img d-flex col-lg-5 py-2">
+                        <img class="img-1" src="../pictures/react.png">
+                        <img class="img-2" src="../pictures/js.png">
+                    </div><!-- End Tech-Img-->
+                    <div class="tech-img d-flex col-lg-5 py-2">
+                        <img class="img-1" src="../pictures/css.png">
+                        <img class="img-2" src="../pictures/html.png">
+                    </div><!-- End Tech-Img-->
+                </div><!-- End Row -->
+            </div><!-- End Container-Flex -->
+        </section><!-- End Techs -->
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex pt-4">
