--- a/html/index.html
+++ b/html/index.html
@@ -215,30 +215,30 @@
             </div><!-- End Row -->
         </section><!-- End About-Us -->
         <section class="techs">
-            <div class="container-flex py-4">
-                <h1 class="py-2 px-lg-5">Technologies We Use</h1>
-                <div class="row d-flex d-flex align-items-center pt-2">
-                    <div class="tech-img d-flex col-lg-5 py-2">
-                        <img class="img-1" src="../pictures/django.png">
-                        <img class="img-2" src="../pictures/python.png">
-                    </div><!-- End Tech-Img-->
-                    <div class="tech-img d-flex col-lg-5 py-2">
-                        <img class="img-1" src="../pictures/node.png">
-                        <img class="img-2" src="../pictures/js.png">
-                    </div><!-- End Tech-Img-->
-                </div><!-- End Row -->
-                <div class="row d-flex d-flex align-items-center py-4">
-                    <div class="tech-img d-flex col-lg-5 py-2">
-                        <img class="img-1" src="../pictures/react.png">
-                        <img class="img-2" src="../pictures/js.png">
-                    </div><!-- End Tech-Img-->
-                    <div class="tech-img d-flex col-lg-5 py-2">
-                        <img class="img-1" src="../pictures/css.png">
-                        <img class="img-2" src="../pictures/html.png">
-                    </div><!-- End Tech-Img-->
-                </div><!-- End Row -->
-            </div><!-- End Container-Flex -->
-        </section><!-- End Techs -->
+           <h1 class="py-2 px-lg-5">Technologies We Use</h1>
+           <div class="container-flex d-flex justify-content-center py-4">
+             <div class="slider container-flex py-2">
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/django.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/react.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/node.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/html.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/css.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/python.png">
+                </div>
+             </div>
+           </div>
+        </section><!-- End Techs-->
     </body><!-- End Body -->
     <footer>
         <div class="footer-cover container-flex pt-4">
