added contact us

--- a/html/index.html
+++ b/html/index.html
@@ -222,10 +222,13 @@
                     <img src="../pictures/django.png">
                 </div>
                 <div class="slider-img col-lg-2 mx-1">
-                    <img src="../pictures/react.png">
+                    <img src="../pictures/python.png">
                 </div>
                 <div class="slider-img col-lg-2 mx-1">
                     <img src="../pictures/node.png">
+                </div>
+                <div class="slider-img col-lg-2 mx-1">
+                    <img src="../pictures/react.png">
                 </div>
                 <div class="slider-img col-lg-2 mx-1">
                     <img src="../pictures/html.png">
@@ -233,15 +236,64 @@
                 <div class="slider-img col-lg-2 mx-1">
                     <img src="../pictures/css.png">
                 </div>
-                <div class="slider-img col-lg-2 mx-1">
-                    <img src="../pictures/python.png">
-                </div>
-             </div>
-           </div>
+             </div><!-- End Slider -->
+           </div><!-- End Container-FLex -->
         </section><!-- End Techs-->
+        <section class="contact">
+            <div class="container-flex mt-4">
+                <div class="cover">
+                    <div class="row d-flex justify-content-center align-items-center">
+                        <div class="contact-info col-lg-4">
+                            <h1 class="text-light py-2 mt-4 px-lg-5">Contact Details</h1>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Email Address:</h3>
+                                <p class="text-light py-3">xwen151214@gmail.com</p>
+                            </div>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Contact Number</h3>
+                                <p class="text-light py-2">0309-1225118</p>
+                            </div>
+                            <div class="contact-box container mt-2 px-lg-5">
+                                <h3 class="text-light py-2">Location:</h3>
+                                <p class="text-light py-2">Karachi</p>
+                            </div>
+                        </div><!-- End Contact-info -->
+                        <div class="contact-form col-lg-8 px-4 py-4">
+                            <form class="row d-flex justify-content-center py-2" method="post">
+                                <div class="col-lg-9 py-2">
+                                    <h1 class="text-light py-2">Navigate Your Questions to Us</h1>
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <input type="text" name="name" placeholder="Your Name">
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <input type="email" name="email" placeholder="Your Email">
+                                </div>
+                                <div class="col-lg-9 py-3">
+                                    <input type="number" name="number" placeholder="Your Contact Number">
+                                </div>
+                                <div class="col-lg-9 py-3">
+                                    <textarea name="message" placeholder="Your Message" rows="5" cols="62"></textarea>
+                                </div>
+                                <div class="col-lg-9 py-2">
+                                    <button class="form-submit btn d-flex">
+                                        <div class="col-lg-1 mr-4 px-0">
+                                            <i class="fa fa-envelope"></i>
+                                        </div>
+                                        <div class="col-lg-1 px-0">
+                                            Submit
+                                        </div>
+                                    </button>
+                                </div> 
+                            </form><!-- End Form -->
+                        </div>
+                    </div><!-- End Row>-->
+                </div><!-- End Cover -->
+            </div><!-- End Container-Flex -->
+        </section><!-- End Conatct-->
     </body><!-- End Body -->
     <footer>
-        <div class="footer-cover container-flex pt-4">
+        <div class="footer-cover container-flex mt-4 pt-4">
             <div class="container-flex">
                 <div class="row d-flex justify-content-center align-items-center">
                   <ul class="quick-links d-flex justify-content-center">
