--- a/html/index.html
+++ b/html/index.html
@@ -136,7 +136,7 @@
                 <div class="services content row d-flex justify-content-center py-2">
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png">
-                        <h2 class="text-center py-2 w-100">Website Development</h2>
+                        <h2 class="text-center py-2">Website Development</h2>
                         <div class="description container-flex py-2">
                             <h3 class="service-text text-light py-2 px-3"></h3>
                         </div><!-- End Description -->
